[tool.poetry]
name = "langchain-lab"
version = "0.1.0"
description = ""
authors = ["Daniel Graue <you@example.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.2.6"
python-dotenv = "^1.0.1"
langchain-groq = "^0.1.6"
langchain-community = "^0.2.6"
transformers = "^4.42.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
